--- a/Visualizations/MaxTemp.html
+++ b/Visualizations/MaxTemp.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wind</title>
+    <title>Max Temperature</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -42,9 +42,9 @@
         <section class="row">
           <div class="col-md-8">
             <article class="description-content">
-              <h1 class="description-header">Latitude vs. Wind Speeds</h1>
+              <h1 class="description-header">Latitude vs. Temperature</h1>
               <hr class="description-hr"/>
-              <img src="../assets/images/WindSpeeds.png" alt="" id="description-image"/>
+              <img src="../assets/images/MaxTemp.png" alt="" id="description-image"/>
               <p>Based on the information provided, as shown in the graph, there is no significant correlation between latitude and cloudiness.</p>
             </article>
           </div>
