--- a/Visualizations/MaxTemp.html
+++ b/Visualizations/MaxTemp.html
@@ -45,7 +45,7 @@
               <h1 class="description-header">Latitude vs. Temperature</h1>
               <hr class="description-hr"/>
               <img src="../assets/images/MaxTemp.png" alt="" id="description-image"/>
-              <p>Based on the information provided, as shown in the graph, there is no significant correlation between latitude and cloudiness.</p>
+              <p>Here we can see there is definitely some significant correlation between latitude and max temperatures of locations. As we get closer to the equatorial line, the max temperatures climb up, peaking around 20* on either side and then falling pretty consistantly once you get further away.</p>
             </article>
           </div>
 
