--- a/Visualizations/humidity.html
+++ b/Visualizations/humidity.html
@@ -45,7 +45,7 @@
               <h1 class="description-header">Latitude vs. Humidity</h1>
               <hr class="description-hr"/>
               <img src="../assets/images/Humidity.png" alt="" id="description-image"/>
-              <p>Based on the information provided, as shown in the graph, there is no significant correlation between latitude and cloudiness.</p>
+              <p>Based on the information provided, just as we have seen with cloudiness, there is no significant correlation between latitude and humidity. There is a steady pattern of 60-100% humidity across the chart expanse, but no definite difference by latitude.</p>
             </article>
           </div>
 
