--- a/Visualizations/wind.html
+++ b/Visualizations/wind.html
@@ -45,7 +45,7 @@
               <h1 class="description-header">Latitude vs. Wind Speeds</h1>
               <hr class="description-hr"/>
               <img src="../assets/images/WindSpeeds.png" alt="" id="description-image"/>
-              <p>Based on the information provided, as shown in the graph, there is no significant correlation between latitude and cloudiness.</p>
+              <p>With our current analysis, it is difficult to find any obvious correlation between latittude and Wind speeds. Most of the demographice falls within the 0-20/mph windspeeds across the expanse, with a fair amount of outliers.</p>
             </article>
           </div>
 
